package calculatorMVC.model.multiplyOperation;

public interface Imultiply {
    double multiply();
}
