package calculatorMVC.view;

public interface IView {

    default void runCalculator() {
    }

}
