package calculatorMVC.view.input;

    public interface IInput {
        String getInput();
    }
