package calculatorMVC.view.output;

public interface IOutput {
    void displayOutput(String result);
}